Layout fix (#48)
* fix: changed react-router to react-router-dom

* fix: layout shift due to position absolute

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -553,8 +553,6 @@
 }
 
 .wrap-loading {
-    position: absolute;
-    inset: 0;
     align-items: center;
     justify-content: center;
 
